--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
  <p>
  	this is paragraph 1
  </p>
+ <p>
+ 	para 2
+ </p>
  <button>
  	hello
  </button>
 </body>
 </html>
+<!-- git init
+     git add .
+     git commit -m "any message" 
+     git push-->
